Upgrade to Javafx 16 release version